List View UI issues

--- a/frontend/src/components/CVEDemo/CVEDemo.module.css
+++ b/frontend/src/components/CVEDemo/CVEDemo.module.css
@@ -177,10 +177,8 @@
 }
 
 .list {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
   width: 100%;
+  height: 600px; /* Fixed height for virtual scrolling container */
 }
 
 .errorContainer {
